0.0.5b -> Poprawki kodu